Add register Device API endpoint
